src/scss/_mixins.scss
//
// Mixins
//

@mixin scrollbar {
  &::-webkit-scrollbar {
    width: $scrollbar-width;
  }

  scrollbar-width: $scrollbar-width;
  scrollbar-color: #0d141f #a62b6b;

  &::-webkit-scrollbar-track {
    background: #0d141f;
  }

  &::-webkit-scrollbar-thumb {
    background-color: #a62b6b;
    border-radius: 6px;
    border: 4px solid #0d141f;
    cursor: pointer;
  }
}

@mixin defaultStyleBoxShadow {
  -webkit-box-shadow: 0 0 29px -1px rgba(0,0,0,0.75);
  -moz-box-shadow: 0 0 29px -1px rgba(0,0,0,0.75);
  box-shadow: 0 0 29px -1px rgba(0,0,0,0.75);
}

